What's new in ver. 1.0.0-pre1:

Initial release of VijayAnand.MauiToolkit.Core NuGet package and is built on top of .NET 6.

The objective is to ease the development of the Razor Class Library (RCL) so that it can be shared with all Blazor targets (.NET MAUI, Server, WebAssembly, Windows Forms, and WPF).

And .NET MAUI targets Android, iOS, macOS (via Mac Catalyst), and Windows (via WinUI 3).

To start with defines the following abstractions:

1. Dialogs - IDialogService
2. Navigation - INavigationService
3. Share - IShareService