@@ -13,7 +13,7 @@ if "%packageVersion%"=="" (echo Version # not configured && goto end)
 if exist .\MauiBlazor.Markup\bin\Debug\MauiBlazor.Markup.%packageVersion%.nupkg del .\MauiBlazor.Markup\bin\Debug\MauiBlazor.Markup.%packageVersion%.nupkg
 
 echo Creating NuGet package ...
-dotnet build .\MauiBlazor.Markup\MauiBlazor.Markup.csproj -c Debug -p:PackageVersion=%packageVersion%
+dotnet build .\MauiBlazor.Markup\MauiBlazor.Markup.csproj -c Debug -p:PackageVersion=%packageVersion% -p:ContinuousIntegrationBuild=true
 echo Process completed.
 
 :end
