@@ -1,0 +1,79 @@
+﻿namespace VijayAnand.MauiToolkit.Core.Helpers
+{
+    public static class AuthConstants
+    {
+        // Request
+
+        public const string GrantType = "grant_type";
+
+        public const string ResponseType = "response_type";
+
+        public const string ClientId = "client_id";
+
+        public const string ClientSecret = "client_secret";
+
+        public const string Scope = "scope";
+
+        public const string State = "state";
+
+        public const string RedirectUri = "redirect_uri";
+
+        public const string Username = "username";
+
+        public const string Password = "password";
+
+        public const string ResponseMode = "response_mode";
+
+        public const string FormPost = "form_post";
+
+        public const string Query = "query";
+
+        public const string Fragment = "fragment";
+
+        public const string Nonce = "nonce";
+
+        // Response
+
+        public const string Code = "code";
+
+        public const string AccessToken = "access_token";
+
+        public const string IdToken = "id_token";
+
+        public const string RefreshToken = "refresh_token";
+
+        public const string TokenType = "token_type";
+
+        public const string ExpiresIn = "expires_in";
+
+        public const string Error = "error";
+
+        public const string Error_Description = "error_description";
+
+        public const string ErrorUri = "error_uri";
+
+        public const string RefreshTokenExpiresIn = "refresh_token_expires_in";
+
+        // Error Codes
+
+        public const string InvalidRequest = "invalid_request";
+
+        public const string InvalidClient = "invalid_client";
+
+        public const string InvalidGrant = "invalid_grant";
+
+        public const string UnauthorizedClient = "unauthorized_client";
+
+        public const string AccessDenied = "access_denied";
+
+        public const string UnsupportedGrantType = "unsupported_grant_type";
+
+        public const string UnsupportedResponseType = "unsupported_response_type";
+
+        public const string InvalidScope = "invalid_scope";
+
+        public const string ServerError = "server_error";
+
+        public const string TemporarilyUnavailable = "temporarily_unavailable";
+    }
+}
