@@ -1,0 +1,5 @@
+﻿namespace VijayAnand.MauiToolkit.Core
+{
+    [AttributeUsage(AttributeTargets.Assembly)]
+    public class LinkerSafeAttribute : Attribute { }
+}
