@@ -1,5 +1,9 @@
 // Project reference
 global using VijayAnand.MauiToolkit.Core;
+global using VijayAnand.MauiToolkit.Core.Services;
+
+// Local namespace
+global using VijayAnand.MauiToolkit.Services;
 
 // Static
 global using static Microsoft.Maui.Graphics.Colors;
