@@ -1,0 +1,7 @@
+{
+  "sdk": {
+    "allowPrerelease": true,
+    "rollForward": "latestMinor",
+    "version": "6.0.200"
+  }
+}
